--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -22,7 +22,13 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@kniferoll/types": ["../../packages/types/src"]
+    }
   },
   "include": ["src"]
 }
