--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -359,8 +359,10 @@ inspector_port = 8083
 # The Deno major version to use.
 deno_version = 2
 
-# [edge_runtime.secrets]
-# secret_key = "env(SECRET_VALUE)"
+[edge_runtime.secrets]
+STRIPE_SECRET_KEY = "env(STRIPE_SECRET_KEY)"
+STRIPE_PRO_PRICE_ID = "env(STRIPE_PRO_PRICE_ID)"
+SERVICE_ROLE_KEY = "env(SERVICE_ROLE_KEY)"
 
 [analytics]
 enabled = true
