add stripe webhook secret to config

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -362,6 +362,7 @@ deno_version = 2
 [edge_runtime.secrets]
 STRIPE_SECRET_KEY = "env(STRIPE_SECRET_KEY)"
 STRIPE_PRO_PRICE_ID = "env(STRIPE_PRO_PRICE_ID)"
+STRIPE_WEBHOOK_SECRET = "env(STRIPE_WEBHOOK_SECRET)"
 SERVICE_ROLE_KEY = "env(SERVICE_ROLE_KEY)"
 
 [analytics]
