--- a/.github/workflows/build_and_lint.yml
+++ b/.github/workflows/build_and_lint.yml
@@ -24,11 +24,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run lint
-        run: pnpm lint
-
-      - name: Run type check
-        run: pnpm tsc --noEmit
+      - name: Lint
+        run: pnpm --filter web lint
 
       - name: Build
-        run: pnpm build
+        run: pnpm --filter web build
