--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,7 @@
   "tasks": {
     "build": { "dependsOn": ["^build"], "outputs": ["dist/**"] },
     "dev": { "cache": false, "persistent": true },
-    "lint": { "dependsOn": ["^build"] }
+    "lint": { "dependsOn": ["^build"] },
+    "test": { "dependsOn": ["^build"] }
   }
 }
