--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,8 @@ jobs:
           cache: "pnpm"
 
       - run: pnpm install --frozen-lockfile
-      - run: npx playwright install chromium --with-deps
+      - name: Install Playwright browsers
+        run: pnpm --filter web exec playwright install chromium --with-deps
 
       - uses: supabase/setup-cli@v1
         with:
