--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "packageManager": "pnpm@8.15.0",
   "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,css,md}": [
+      "prettier --write"
+    ],
     "apps/web/**/*.{ts,tsx}": [
       "pnpm --filter web lint --fix"
     ]
